--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iamsangeeth",
   "version": "1.0.0",
-  "description": "my personal website",
+  "description": "My personal website",
   "author": "Sangeeth_ks <sangeeth.ks@mobiotics.com>",
   "private": true,
   "scripts": {
