--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "bootstrap-sass": "^3.3.7",
     "chai": "^4.1.2",
     "chalk": "^2.1.0",
     "chromedriver": "^2.33.1",
@@ -72,6 +73,8 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "phantomjs-prebuilt": "^2.1.15",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
     "selenium-server": "^3.6.0",
